k8s/download/mylar/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mylar
  namespace: download
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mylar
  template:
    metadata:
      labels:
        app: mylar
    spec:
      nodeSelector:
        kubernetes.io/hostname: rinzler
      containers:
      - name: mylar
        image: linuxserver/mylar3:latest
        ports:
        - containerPort: 8090
          name: http
        volumeMounts:
        - name: config
          mountPath: /config
        - name: comics
          mountPath: /comics
        - name: downloads
          mountPath: /downloads
        resources:
          limits:
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
      volumes:
      - name: config
        hostPath:
          path: /var/lib/docker/volumes/mylar_data/_data
          type: Directory
      - name: comics
        hostPath:
          path: /storage/media/comics
          type: Directory
      - name: downloads
        hostPath:
          path: /storage/downloads
          type: Directory
