k8s/download/mylar/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mylar
  namespace: download
spec:
  selector:
    app: mylar
  ports:
  - name: http
    port: 8090
    targetPort: 8090
