k8s/download/mylar/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mylar
  namespace: download
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  tls:
  - hosts:
    - mylar.rinzler.me
    - mylar.rinzler.cloud
    secretName: mylar-tls
  rules:
  - host: mylar.rinzler.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mylar
            port:
              number: 8090
  - host: mylar.rinzler.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mylar
            port:
              number: 8090
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mylar
            port:
              number: 8090
